Fixed editing car, added creating new car

--- a/CarWash.MVC/Views/Brands/Index.cshtml
+++ b/CarWash.MVC/Views/Brands/Index.cshtml
@@ -7,7 +7,7 @@
 <h1>Brands</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Create New Brand</a> | <a asp-controller="Cars" asp-action="Create">Create New Car</a>
 </p>
 <table class="table">
     <thead>
