--- a/CarWash.MVC/Views/Brands/Edit.cshtml
+++ b/CarWash.MVC/Views/Brands/Edit.cshtml
@@ -24,7 +24,7 @@
                     <thead>
                         <tr>
                             <th>
-                                Car Models | @Html.ActionLink("Add new car", "Edit", new { /*id=item.BrandId*/ })
+                                Car Models | @Html.ActionLink("Add new car", "Create", "Cars")
                             </th>
                             <th></th>
                         </tr>
@@ -55,7 +55,7 @@
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to Brands</a>
 </div>
 
 @section Scripts {
