--- a/CarWash.MVC/Views/Cars/Edit.cshtml
+++ b/CarWash.MVC/Views/Cars/Edit.cshtml
@@ -18,7 +18,7 @@
                 <span asp-validation-for="Model" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-primary mt-2" />
             </div>
         </form>
     </div>
