Added base controller

--- a/CarWash.MVC/Views/Cars/Create.cshtml
+++ b/CarWash.MVC/Views/Cars/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using CarWash.Database.Models
-@model CarWash.MVC.ViewModels.CarCreateViewModel
+﻿@model CarWash.MVC.ViewModels.CarCreateViewModel
 
 @{
     ViewData["Title"] = "Create a new car";
