--- a/CarWash.MVC/Views/Cars/Edit.cshtml
+++ b/CarWash.MVC/Views/Cars/Edit.cshtml
@@ -23,7 +23,9 @@
         </form>
     </div>
 </div>
-
+<div>
+    @Html.ActionLink($"Back to {@Model.Brand.Name}", "Edit", "Brands", new { id = Model.BrandId })
+</div>
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
 }
