--- a/CarWash.MVC/Views/Cars/Create.cshtml
+++ b/CarWash.MVC/Views/Cars/Create.cshtml
@@ -13,15 +13,15 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Car.Model" class="control-label"></label>
-                <input asp-for="Car.Model" class="form-control" />
-                <span asp-validation-for="Car.Model" class="text-danger"></span>
+                <label asp-for="Entity.Model" class="control-label"></label>
+                <input asp-for="Entity.Model" class="form-control" />
+                <span asp-validation-for="Entity.Model" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="BrandsSelectList" class="control-label"></label>
-                <select asp-for="Car.BrandId" class="form-control" asp-items="@Model.BrandsSelectList">
+                <label asp-for="SelectListItems" class="control-label"></label>
+                <select asp-for="Entity.BrandId" class="form-control" asp-items="@Model.SelectListItems">
                 </select>
-                <span asp-validation-for="BrandsSelectList" class="text-danger"></span>
+                <span asp-validation-for="SelectListItems" class="text-danger"></span>
             </div>
             <div class="form-group mt-2">
                 <input type="submit" value="Create" class="btn btn-primary" />
