--- a/CarWash.MVC/Views/Shared/_Layout.cshtml
+++ b/CarWash.MVC/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Brands" asp-action="Index">Brands</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Services" asp-action="Index">Services</a>
+                        </li>
                     </ul>
                 </div>
             </div>
