--- a/CarWash.MVC/Views/Employees/Details.cshtml
+++ b/CarWash.MVC/Views/Employees/Details.cshtml
@@ -46,6 +46,6 @@
     </dl>
 </div>
 <div>
-    @Html.ActionLink("Edit", "Edit", new { /* id = Model.PrimaryKey */ }) |
+    @Html.ActionLink("Edit", "Edit", new { id = Model.EmployeeId }) |
     <a asp-action="Index">Back to List</a>
 </div>
